--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,8 +1,8 @@
 //----Основной файл стилей----
 //Импорт:
-@import "_fonts"; //1)шрифты
-@import "_mixins";//2)миксины
-@import "_vars";//3)переменные
+@import "fonts"; //1)шрифты
+@import "mixins";//2)миксины
+@import "vars";//3)переменные
 
 //Общие стили:
 //1)Частичное обнуление браузерных стилей
@@ -86,6 +86,7 @@ body{
       background-color: $primary-col;
       width: 100%;
       height: 200px;
+      border:2px solid white;
       a{
         font-size: 1.5em;
         font-family: PoiretOne, 'sans-serif';
@@ -143,6 +144,7 @@ body{
     grid-column: 11/13;
     justify-content: center;
     background-color: $primary-col;
+    border:2px solid white;
     nav{
       padding: 20px 7px;
       a{
@@ -168,7 +170,7 @@ body{
       width: 250px;
       border-radius: 20px;
       background-color: white;
-      height: 360px;
+      height: 420px;
       overflow: hidden;
       .teammate-top{
         height: 130px;
@@ -191,9 +193,17 @@ body{
         top: -65px;
       }
       .teammate-text{
-        margin-top: -30px;
+        margin-top: -50px;
         padding: 7px;
         text-align: center;
+        p{
+          height: 110px;
+        }
+        .teammate-icon{
+          width: 70px;
+          height: 70px;
+          align-self: center;
+        }
       }
     }
   }
@@ -201,7 +211,7 @@ body{
 //2)Топ продукции
 #top{
   align-items: center;
-  background-image: url("../img/back-left.jpg");
+  background-image: url("../../img/back-left.jpg");
   background-size: cover;
   border-bottom:40px solid $primary-col;
   .top-container{
@@ -258,7 +268,7 @@ body{
 }
 #personal-model{
   align-items: center;
-  background-image: url("../img/back-right.jpg");
+  background-image: url("../../img/back-right.jpg");
   background-size: cover;
   .personal-model-text{
     max-width: 500px;
@@ -306,6 +316,7 @@ body{
 
 //Подвал
 .footer{
+  border: 2px solid white;
   grid-column: 1/7;
   background-color: $primary-col;
   justify-content: center;
@@ -330,6 +341,6 @@ body{
 }
 
 //Импорт(продолжение):
-@import '_media';//4)медизапросы
-@import "_keyframes";//5)анимации
+@import 'media';//4)медизапросы
+@import "keyframes";//5)анимации
 
