--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AR-OPTIMA</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script defer src="../js/homepage.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script defer src="/js/homepage.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -20,7 +23,7 @@
             <div class="col info-container">
                 <div id="what-is-it" class="col info-part info-part-active">
                     <video preload="auto" autoplay loop="true" muted="muted">
-                        <source src="../media/vrandar.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                        <source src="/media/vrandar.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                     </video>
                     <p><strong>Дополненная реальность</strong> – одна из многих технологий взаимодействия человека и компьютера. Ее специфика заключается в том, что она программным образом визуально совмещает два изначально независимых пространства: мир реальных объектов вокруг нас и виртуальный мир, воссозданный на компьютере.</p>
                 </div>
@@ -53,43 +56,22 @@
             </div>
         </header>
         <section id="our-team" class="col">
-            <h1>{{header}}</h1>
             <h2>Наша Команда</h2>
             <div class="team-container row">
-                <div class="teammate col">
-                    <div class="col teammate-top">
-                        <h3>Генеральный директор</h3>
-
+                {{#each mainEmployers}}
+                    <div class="teammate col">
+                        <div class="col teammate-top">
+                            <h3>{{this.name}}</h3>
+                        </div>
+<!--                        TODO аватар-->
+                        <img src="/img/team/anon.jpg" alt="" class="teammate-img">
+                        <div class="col teammate-text">
+                            <h4>{{this.firstname}} {{this.surname}}</h4>
+                            <p>{{this.description}}</p>
+                            <img src="/img/icons/{{this.icon}}" class="teammate-icon" alt="Иконка специальности">
+                        </div>
                     </div>
-                    <img src="../img/team/anon.jpg" alt="" class="teammate-img">
-                    <div class="col teammate-text">
-                        <h4>Титов Александр</h4>
-                        <p>Автор идеи и создатель проекта. Также является генеральный разработчиком. Вообщем отличный парень, а главное - скромный</p>
-                        <img src="" alt="">
-                    </div>
-                </div>
-                <div class="teammate col">
-                    <div class="col teammate-top">
-                        <h3>Дизайнер</h3>
-                    </div>
-                    <img src="../img/team/anon.jpg" alt="" class="teammate-img">
-                    <div class="col teammate-text">
-                        <h4>Артём Яскин</h4>
-                        <p>Наш штатный дизайнер. Эксперт в создании 3d-моделей. Готов работать за еду и печеньки. За это мы его и любим.</p>
-                        <img src="" alt="">
-                    </div>
-                </div>
-                <div class="teammate col">
-                    <div class="col teammate-top">
-                        <h3>Мобильный разработчик</h3>
-                    </div>
-                    <img src="../img/team/anon.jpg" alt="" class="teammate-img">
-                    <div class="col teammate-text">
-                        <h4>Анонимный Анон</h4>
-                        <p>На это месте можешь быть ты, просто свяжись с нами!</p>
-                        <img src="" alt="">
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </section>
         <section id="top" class="col">
@@ -97,7 +79,7 @@
             <div class="top-container row">
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/first-prod.png" alt="">
+                        <img src="/img/products/first-prod.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Ваша надпись</h3>
@@ -110,7 +92,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/gold-liom.png" alt="">
+                        <img src="/img/products/gold-liom.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Золотой лев</h3>
@@ -123,7 +105,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/chair.png" alt="">
+                        <img src="/img/products/chair.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Деревянный стул</h3>
@@ -136,7 +118,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/molekula.png" alt="">
+                        <img src="/img/products/molekula.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Молекула</h3>
@@ -149,7 +131,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/tajmahal.png" alt="">
+                        <img src="/img/products/tajmahal.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Тадж Махал</h3>
@@ -162,7 +144,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/scorpio.png" alt="">
+                        <img src="/img/products/scorpio.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Кубоскорпион</h3>
@@ -176,7 +158,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/sonicgirl.png" alt="">
+                        <img src="/img/products/sonicgirl.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Эми Роуз</h3>
@@ -190,7 +172,7 @@
                 </div>
                 <div class="top-product row">
                     <div class="col top-product-img">
-                        <img src="../img/products/house.png" alt="">
+                        <img src="/img/products/house.png" alt="">
                     </div>
                     <div class="col top-product-text">
                         <h3>Дом</h3>
@@ -208,7 +190,7 @@
             <div class="demo-container col">
                 <p>Простой откройте <a href="">эту страницу</a> и наведите камеру на это изображение</p>
                 <div class="demo-container">
-                    <img src="../img/demo-img.webp" alt="">
+                    <img src="/img/demo-img.webp" alt="">
                 </div>
             </div>
         </section>
@@ -218,7 +200,7 @@
             <p class="personal-model-text">Если вы занимаетесь 3d - дизайном или у вас уже есть nft-токены на какие-либо цифровые произведения, то мы поможем Вам создать вашу персоанльную дополненную реальность</p>
             <div class="personal-container row">
                 <div class="personal-card col">
-                    <img src="../img/personal/first-stage.png" alt="" class="personal-card-img">
+                    <img src="/img/personal/first-stage.png" alt="" class="personal-card-img">
                     <div class="personal-card-text">
                         <h3>У меня есть идея и ничего более</h3>
                         <p>Если у вас есть идея или видение произведения, то мы готовы помочь вам с её реализцией и получением nft-токена на вашу интеллекутальную собственность</p>
@@ -229,7 +211,7 @@
                     </div>
                 </div>
                 <div class="personal-card col">
-                    <img src="../img/personal/second-stage.png" alt="" class="personal-card-img">
+                    <img src="/img/personal/second-stage.png" alt="" class="personal-card-img">
                     <div class="personal-card-text">
                         <h3>У меня есть 3d-модель и ничего более</h3>
                         <p>Мы поможем вам получить nft-токен, тем самым закрепив права на оригинал цифрового прозиведения, а также создадим 3d-визуализацию. Важно, чтобы вы являлись автором!</p>
@@ -240,7 +222,7 @@
                     </div>
                 </div>
                 <div class="personal-card col">
-                    <img src="../img/personal/third-stage.png" alt="" class="personal-card-img">
+                    <img src="/img/personal/third-stage.png" alt="" class="personal-card-img">
                     <div class="personal-card-text">
                         <h3>У меня есть 3d-модель и nft-токен</h3>
                         <p>Вам нужна 3d-визуализиция вашего произведения в дополненной реальности? Хотите устроить у себе дома полноцценную высокотехнологичную художественную выставку? Просто свяжитесь с нами!</p>
@@ -267,3 +249,5 @@
     </div>
 </body>
 </html>
+
+
