работает вставка и более менее каркас админки готов"

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -78,15 +78,15 @@
             <h2>Топ</h2>
             <div class="top-container row">
                 <div class="top-product row">
-                    <div class="col top-product-img">
+                    <div class="col top-product-img card-img">
                         <img src="/img/products/first-prod.png" alt="">
                     </div>
-                    <div class="col top-product-text">
+                    <div class="col top-product-text card-text">
                         <h3>Ваша надпись</h3>
                         <h4>Абсолютно любая надпись</h4>
                         <div class="row">
-                            <a class="top-product-link link-to" href="#">Перейти</a>
-                            <span class="top-product-price price">3000₽</span>
+                            <a class="top-product-link card-link link-to" href="#">Перейти</a>
+                            <span class="top-product-price  card-price">3000₽</span>
                         </div>
                     </div>
                 </div>
