переделал всё на async await и загрузка файлов готова

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -192,6 +192,8 @@ body{
         position: relative;
         align-self: center;
         top: -65px;
+        object-fit: contain;
+        background-color: grey;
       }
       .teammate-text{
         margin-top: -50px;
